--- a/style.css
+++ b/style.css
@@ -19,9 +19,13 @@ body {
 }
 .content h2 {
     position: absolute;
-    color: #fff;
+    
     transform: translate(-50%, -50%);
     font-size: 8em;
     text-transform: uppercase; 
     white-space: nowrap;
+}
+.content h2:nth-child(1) {
+    color: transparent;
+    -webkit-text-stroke: 2px #03a9f4;
 }
